// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page controller helpers should return a valid human readable v1 response 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Sunday 30 November 2025

Example notify form form received at 12:00am on 1 September 2025.

---

## What is your name?

Someone

---

## What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

---

## What is your date of birth?

1 January 2000

---

## What month is it?

August 2025

---

## What is the team member\\'s name?

[Download What is the team member\\\\'s name? \\(CSV\\)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

## Who are your favourite LotR characters?

* Gandalf \\(Gandalf\\)
* Frodo \\(Frodo\\)

---

## Please add supporting evidence

Uploaded 1 file:

* [supporting\\_evidence\\.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

---

[Download main form \\(CSV\\)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)
"
`;

exports[`Page controller helpers should return a valid human readable v1 response from a v1 form with sections 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Sunday 30 November 2025

Human Readable v1 form form received at 12:00am on 1 September 2025.

---

## What is your name?

Legolas

---

## What is your address?

1 Anywhere Street
Anywhereville
AN1 2WH

---

## What is your date of birth?

1 January 2000

---

## What is the team member\\'s name?

Frodo

---

## What month is it?

September 2025

---

## Pick a number from 1 \\- 10

5

---

## What is your email address?

legolas@example\\.com

---

## Who are your favourite LotR characters?

* Gandalf \\(Gandalf\\)
* Frodo \\(Frodo\\)

---

## Describe your quest

Lorem ipsum dolar sit amet

---

[Download main form \\(CSV\\)](http://designer/file-download/b9b53f01-174b-462e-98ec-0996b6531513)
"
`;
